--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
+
+html {
+  box-sizing: border-box;
+  font-size: 62,5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  background-color: #ececec;
+  color:rgb(51, 51, 51);
+}
+
+table {
+  border-collapse: collapse;
+  width: 70%;
+  margin: 0 auto;
+}
+
+th, td {
+  text-align: left;
+  padding: .6rem;
+}
+
+th {
+  background-color: #4e45c7;
+  color: white;
+}
+
+tr {
+  border-bottom: 2px solid transparent;
+}
+
+tr:nth-child(even){
+  background-color: #c7c7c7
+}
+
+tr:hover {
+  border-bottom: 2px solid rgb(51, 51, 51);
+  cursor: pointer;
+}
+
+
+
+
